# pep508-repro

./: Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
